chore: Set up theme and CodeMirror styles

--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "devDependencies": {
     "mdx-deck": "^1.6.7"
   },
-  "name": "testing-with-react"
+  "name": "testing-with-react",
+  "dependencies": {
+    "codemirror": "^5.43.0",
+    "css-loader": "^2.1.0",
+    "raw-loader": "^1.0.0",
+    "react-codemirror2": "^5.1.0",
+    "style-loader": "^0.23.1"
+  }
 }
