--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "mdx-deck build deck.mdx",
     "pdf": "mdx-deck pdf deck.mdx",
     "image": "mdx-deck screenshot deck.mdx",
-    "help": "mdx-deck"
+    "help": "mdx-deck",
+    "test:enzyme": "jest -c jest.config.enzyme.js",
+    "test": "jest -c jest.config.rtl.js"
   },
   "keywords": [],
   "author": "Mark Chandler",
@@ -17,10 +19,20 @@
   },
   "name": "react-testing-talk",
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.0.0",
     "codemirror": "^5.43.0",
     "css-loader": "^2.1.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "jest": "^24.0.0",
+    "jest-dom": "^3.0.1",
     "raw-loader": "^1.0.0",
     "react-codemirror2": "^5.1.0",
+    "react-testing-library": "^5.4.4",
     "style-loader": "^0.23.1"
   }
 }
