--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.0.0",
+    "babel-polyfill": "^6.26.0",
     "codemirror": "^5.43.0",
     "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
